Fix grid under-scaling
Grid was underscaling when 16x16 as it was too small of a grid for the container it was in. Decreased the starting div size to keep things uniform.

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,6 @@
     min-height: 0;
 }
 
-/* .drawDiv:hover {
-    background-color: rgb(106, 106, 107);
-} */
-
 .drawnColumnDiv {
     background-color: rgb(106, 106, 107);
 }
@@ -37,13 +33,13 @@
     width: 320px;
     height: 320px;
     max-width: 320px;
-    max-height: 320px;
+    max-height: 295px;
 }
 
 .tempGrid {
     display: flex;
     flex-direction: column;
     height: 320px;
-    max-height: 320px;
+    max-height: 295px;
     min-width: 0;
 }
